--- a/deploy/fluenthose/values.yaml
+++ b/deploy/fluenthose/values.yaml
@@ -4,13 +4,6 @@
 
 replicaCount: 2
 
-image:
-  repository: fluenthose
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
-
-
 config:
   token: foo
   listen:
@@ -22,6 +15,43 @@ config:
       user: loki
       password: loki
       tennant: fake
+
+fluentbit:
+  args:
+    - serve
+    - --log-level info
+  image:
+    repository: fluent/fluent-bit
+    tag: 1.8
+  resources: {}
+    # We usually recommend not to specify default resources and to leave this as a conscious
+    # choice for the user. This also increases chances charts run on environments with little
+    # resources, such as Minikube. If you do want to specify resources, uncomment the following
+    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    # limits:
+    #   cpu: 100m
+    #   memory: 128Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 128Mi
+
+fluenthose:
+  image:
+    repository: quay.io/betsson-oss/fluenthose
+    pullPolicy: IfNotPresent
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: ""
+  resources: {}
+    # We usually recommend not to specify default resources and to leave this as a conscious
+    # choice for the user. This also increases chances charts run on environments with little
+    # resources, such as Minikube. If you do want to specify resources, uncomment the following
+    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    # limits:
+    #   cpu: 100m
+    #   memory: 128Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 128Mi
 
 imagePullSecrets: []
 nameOverride: ""
@@ -52,18 +82,6 @@ securityContext: {}
 service:
   type: ClusterIP
   port: 80
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
 
 autoscaling:
   enabled: false
