--- a/deploy/fluenthose/templates/service.yaml
+++ b/deploy/fluenthose/templates/service.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ include "fluenthose.fullname" . }}
   labels:
     {{- include "fluenthose.labels" . | nindent 4 }}
+  annotations:
+    {{- .Values.service.annotations | toYaml | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
