--- a/deploy/fluenthose/templates/secret.yaml
+++ b/deploy/fluenthose/templates/secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
   name: {{ include "fluenthose.fullname" . }}
   labels:
     {{- include "fluenthose.labels" . | nindent 4 }}
+type: Opaque
 data:
-    fluent-bit.conf: |
-        {{- include "fluenthose.fluentbit.conf" . | nindent 8 }}
+  accessKey: {{ .Values.config.accessKey | b64enc}}
