--- a/deploy/fluenthose/values.yaml
+++ b/deploy/fluenthose/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 2
 
 config:
-  token: foo
+  accessKey: CHANGEME
   listen:
     address: ":8080"
   logLevel: info
@@ -16,10 +16,21 @@ config:
       password: loki
       tennant: fake
 
+service:
+  type: LoadBalancer
+  port: 443
+  annotations: {}
+    # external-dns.alpha.kubernetes.io/hostname: fluenthose.somedomain.com.
+    # external-dns.alpha.kubernetes.io/ttl: "60"
+    # service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
+    # service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-central-1:XXX:certificate/XXX-XXX-XXX-XXX
+    # service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
+    # service.beta.kubernetes.io/aws-load-balancer-internal: "false"
+    # service.beta.kubernetes.io/aws-load-balancer-target-group-attributes: preserve_client_ip.enabled=true
+    # service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
+
+
 fluentbit:
-  args:
-    - serve
-    - --log-level info
   image:
     repository: fluent/fluent-bit
     tag: 1.8
@@ -36,6 +47,10 @@ fluentbit:
     #   memory: 128Mi
 
 fluenthose:
+  args:
+    - "serve"
+    - "--log-level" 
+    - "debug"
   image:
     repository: quay.io/betsson-oss/fluenthose
     pullPolicy: IfNotPresent
@@ -78,10 +93,6 @@ securityContext: {}
   # readOnlyRootFilesystem: true
   # runAsNonRoot: true
   # runAsUser: 1000
-
-service:
-  type: ClusterIP
-  port: 80
 
 autoscaling:
   enabled: false
