--- a/deploy/fluenthose/templates/service.yaml
+++ b/deploy/fluenthose/templates/service.yaml
@@ -8,6 +8,7 @@ metadata:
     {{- .Values.service.annotations | toYaml | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
+  externalTrafficPolicy: Local
   ports:
     - port: {{ .Values.service.port }}
       targetPort: http
