--- a/deploy/fluenthose/values.yaml
+++ b/deploy/fluenthose/values.yaml
@@ -19,6 +19,7 @@ config:
 service:
   type: LoadBalancer
   port: 443
+  externalTrafficPolicy: Local
   annotations: {}
     # external-dns.alpha.kubernetes.io/hostname: fluenthose.somedomain.com.
     # external-dns.alpha.kubernetes.io/ttl: "60"
@@ -28,6 +29,8 @@ service:
     # service.beta.kubernetes.io/aws-load-balancer-internal: "false"
     # service.beta.kubernetes.io/aws-load-balancer-target-group-attributes: preserve_client_ip.enabled=true
     # service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
+    # service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: /health/live
+    # service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: http
 
 
 fluentbit:
