--- a/deploy/fluenthose/templates/configmap.yaml
+++ b/deploy/fluenthose/templates/configmap.yaml
@@ -9,3 +9,5 @@ data:
         {{- include "fluenthose.fluentbit.conf" . | nindent 8 }}
     parsers.conf: |
         {{- include "fluenthose.parsers.conf" . | nindent 8 }}
+    scripts.lua: |
+        {{- include "fluenthose.scripts.lua" . | nindent 8 }}
